# pippo

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: constants.rs  main.rs  utils.rs
web/: buzz.html  index.html
