[package]
name = "pippo"
version = "0.1.0"
authors = ["Dhairy Srivastava <dhairysrivastava5@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "pippo"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-hal = "0.45"
anyhow = "1.0"
embedded-svc = "0.28.1"
embedded-graphics = "0.8.1"
shtcx = "1.0"
ssd1306 = "0.10.0"
toml-cfg = "0.2"
rand = "0.9"
[build-dependencies]
embuild = "0.33"
